Implemented Log & Protocol pagination
